[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
base64 = "0.21.0"
serde = { version = "1.0", features = ["derive"] }
serde_urlencoded = "0.7.1"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1.0.64"
dotenv = "0.15.0"
env_logger = "0.10.0"
actix-cors = "0.6.4"